[project]
name = "moderate"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "hmr~=0.6.3",
    "hmr-daemon~=0.2.0",
    "orjson~=3.10.18",
    "pydantic~=2.11.7",
    "ruff~=0.12.1",
    "typer-slim~=0.16.0",
]

[tool.ruff]
line-length = 320

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
]

[tool.pyright]
typeCheckingMode = "standard"
