[project]
name = "moderate"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "diskcache2~=1.0.0",
    "fastapi~=0.127.0",
    "hmr~=0.7.0",
    "hmr-daemon~=0.4.0",
    "httpx[http2]~=0.28.1",
    "openai~=2.9.0",
    "orjson~=3.11.0",
    "promplate~=0.3.5.4",
    "pydantic~=2.12.0",
    "ruff~=0.14.0",
    "typer-slim~=0.20.0",
    "uvicorn-hmr~=0.1.1.0",
]

[tool.ruff]
line-length = 320

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
]

[tool.pyright]
typeCheckingMode = "standard"

[tool.m.aliases]
dev = "uvicorn-hmr gateway.server:app --clear"

[tool.m.chat]
openai_base_url = "http://localhost:8000/demo"
openai_api_key = "socimata-moderate"
options = { model = "llama-3.3-70b" }
